change in design

--- a/style.css
+++ b/style.css
@@ -7,160 +7,90 @@
 body {
     background: #222;
 }
-.card {
-    width: 100%;
-    max-width: 470px;
+.card{
+    width:100%;
+    max-width:470px;
     background: linear-gradient(135deg, #000328, #00458e);
-    color: #fff;
-    margin: 100px auto 0;
-    border-radius: 20px;
+    color:#fff;
+    margin:100px auto 0;
+    border-radius:20px;
     padding: 40px 35px;
-    text-align: center;
+    text-align : center;
 }
-.search {
-    width: 100%;
-    display: flex;
+.search{
+    width:100%;
+    display:flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content : space-between
 }
-.search input {
+.search input{
     border: 0;
     outline: 0;
     background: #ebfffc;
-    color: #555;
+    color:#555;
     padding: 10px 25px;
-    border-radius: 30px;
+    border-radius:30px;
     flex: 1;
-    margin-right: 14px;
-    font-size: 18px;
-    height: 50px;
+    margin-right :14px;
+    font-size:18px;
+    height:50px;
 }
-.search button {
+.search button{
     border: 0;
     outline: 0;
     background: #ebfffc;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
+    border-radius:50%;
+    width:50px;
+    height:50px;
+    cursor:pointer;
 }
-.search button img {
-    width: 16px;
+.search button img{
+    width:16px;
 }
-.weather-icon {
-    width: 170px;
-    margin-top: 30px;
+.weather-icon{
+    width:170px;
+    margin-top:30px;
 }
-.weather h1 {
-    font-size: 60px;
-    font-weight: 500;
+.weather h1{
+    font-size:60px;
+    font-weight : 500;
 }
-.weather h2 {
-    font-size: 38px;
-    font-weight: 400;
-    margin-top: -5px;
+.weather h2{
+    font-size:38px;
+    font-weight : 400;
+    margin-top:-5px;
 }
-.details {
-    display: flex;
+.details{
+    display:flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
+    padding:0 20px;
     margin-top: 50px;
 }
-.col {
-    display: flex;
-    align-items: center;
-    text-align: left;
+.col{
+    display:flex;
+    align-items:center;
+    text-align:left;
 }
-.col img {
+.col img{
     width: 40px;
-    margin-right: 10px;
+    margin-right:10px;
 }
-.humidity, .wind {
-    font-size: 24px;
-    margin-top: -2px;
+.humidity,.wind{
+    font-size:24px;
+    margin-top:-2px;
 }
-.weather {
+.weather{
     display: none;
 }
-.error {
-    text-align: center;
-    font-size: 20px;
-    margin-top: 25px;
-    display: none;
+.error{
+    text-align : center;
+    font-size:20px;
+    margin-top:25px;
+    display:none;
 }
-.app-title {
-    margin-top: 10px;
-    align-items: center;
-    margin-bottom: 30px;
-}
-
-@media (max-width: 768px) {
-    .card {
-        margin: 50px auto 0;
-        padding: 30px 20px;
-    }
-    .search input {
-        font-size: 16px;
-        height: 45px;
-    }
-    .search button {
-        width: 45px;
-        height: 45px;
-    }
-    .weather-icon {
-        width: 130px;
-    }
-    .weather h1 {
-        font-size: 50px;
-    }
-    .weather h2 {
-        font-size: 30px;
-    }
-    .details {
-        flex-direction: column;
-        padding: 0;
-    }
-    .col {
-        margin-bottom: 10px;
-    }
-    .col img {
-        width: 30px;
-    }
-    .humidity, .wind {
-        font-size: 20px;
-    }
-}
-
-@media (max-width: 480px) {
-    .card {
-        margin: 30px auto 0;
-        padding: 20px 15px;
-    }
-    .search input {
-        font-size: 14px;
-        height: 40px;
-    }
-    .search button {
-        width: 40px;
-        height: 40px;
-    }
-    .weather-icon {
-        width: 100px;
-    }
-    .weather h1 {
-        font-size: 40px;
-    }
-    .weather h2 {
-        font-size: 25px;
-    }
-    .details {
-        padding: 0;
-    }
-    .col img {
-        width: 25px;
-    }
-    .humidity, .wind {
-        font-size: 18px;
-    }
+.app-title{
+    margin-top:10px;
+    align-items:center;
+    margin-bottom:30px;
 }
