--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Fredoka', sans-serif;
     box-sizing: border-box;
 }
 body {
-    background: #222;
+    background: #282c34;
 }
 .card{
     width:100%;
